make button green and add id to the div it is contained in so that it can be targeted

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
         <option value="SGD">SGD - Singapore Dollar</option>
       </select>
       <p> </p>
-      <div class="hidden">
-        <button class="btn" id="rateConvert">Exchange!</button>
+      <div class="hidden" id="button">
+        <button class="btn btn-success" id="rateConvert">Exchange!</button>
       </div>
       <p> </p>
       <div class="responses"></div>
